Fix subheader links are wrong font size

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ a:hover {
 .section .subheader a
 {
     display: inline-block;
+    font-size: 1rem;
 }
 
 /* -------------- SLIDES --------------- */
